<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/system_about_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:navigationIcon="@drawable/back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:text="关于系统"
            android:layout_gravity="center"
            android:maxLines="1"
            android:textSize="20sp"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_below="@id/system_about_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <ImageView
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/app_icon"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@drawable/app"
         />
    <TextView
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="V 1.0"/>
    <TextView
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/system_about1"
        android:id="@+id/textView" />
    
    <TextView
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/system_about2"/>
    <TextView
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/system_about3"/>
    <TextView
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/system_about4"/>
    </LinearLayout>
    <Button
        android:layout_margin="5dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/service"
        android:textSize="@dimen/textsize_small"
        android:layout_centerHorizontal="true"
        android:textColor="@color/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="《服务条款》"
        android:background="@color/trans"/>
    <TextView
        android:layout_margin="5dp"
        android:id="@+id/Copyright"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/textsize_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/system_about5"/>



</RelativeLayout>